--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <!-- Favicon -->
-    <link rel="icon" href="../public/Assets/icons/favicon.ico" type='image/x-icon' />
+    <link rel="icon" href="./favicon.ico" type='image/x-icon' />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="../public/Assets/icons/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" href="./Assets/icons/apple-touch-icon.png" />
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="./manifest.json" />
 
     <title>Roger-PortFolio</title>
   </head>
